2001-12-08  Dave Peticolas  <dave@krondo.com>

	* src/bin/overrides/gnucash-build-env.in: add report-gnome dir

	* src/backend/postgres/test/test-db.c: remove unused function

	* configure.in: remove -Wno-unused

2001-12-07  Dave Peticolas  <dave@krondo.com>

	* src/report/report-system/report.scm: move a gnome function
	to report-gnome module

	* src/report/report-system/report-system.scm: remove export

	* src/report/report-gnome/report-gnome.scm: new file.

	* src/report/report-gnome/gw-report-gnome-spec.scm: wrap some more
	report bindings.

	* src/report/report-gnome/gncmod-report-gnome.c: load g-wrapped
	and gnucash report-gnome modules.

	* src/report/report-gnome/Makefile.am: add report-gnome.scm module

	* src/gnome/gw-gnc-spec.scm: remove some report bindings

2001-12-05  Bill Gribble  <grib@billgribble.com>

	* use AM_PATH_LIBGLADE instead of gnome-config for libglade paths 

	* add --disable-gui option to configure.in and reshuffle 
	src/Makefile.am to not build gui code if it's used. 

2001-12-04  Rob Browning  <rlb@defaultvalue.org>

	* src/scm/main.scm: merge bootstrap.scm contents here and
	rearrange code to eliminate most, if not all top-level activities.

	* src/scm/.cvsignore: remove bootstrap.scm and add build-config.scm.

	* src/scm/Makefile.am: remove depend.scm and handle switch from
	bootstrap.scm to main.scm and build-config.scm.

	* src/scm/build-config.scm.in: new file -- keep all the
	auto-generated bits (and only those) here.

	* src/scm/doc.scm (gnc:load-help-topics): just use
	%search-load-path for now, though in the future these files
	probably ought to be elsewhere.

	* src/scm/path.scm (gnc:default-doc-dirs): match build-config.scm
	var names for help dir.

	* src/scm/command-line.scm: add other env var lookups as part of
	startup changes.  Change bootstrap to main.
	(gnc:*load-path*): eliminate.

	* src/gnc-module/gnc-module.c: remove guile includes.

	* src/gnc-module/Makefile.am (libgncmodule_la_LIBADD): remove