@@ -1,0 +1,8 @@
+divert(-1)
+
+/* include definitions for setter macros */
+include(`table.m4')
+
+divert
+
+store_one_only_header(checkpoint);
