@@ -63,6 +63,7 @@ static short module = MOD_BACKEND;
 /* ============================================================= */
 /* include autogenerated code */
 
+#include "check-autogen.h"
 #include "check-autogen.c"
 
 /* ============================================================= */
