@@ -219,18 +219,20 @@ define(`version_function', `version_function_r(firstrec($@))')
 
 /* -------- */
 
-define(`store_one_only', 
+define(`store_one_only_header',
 `
 /* ------------------------------------------------------ */
 /* This routine stores/updates one record in the database.
  * It does not do any traversals, it does not lock.  
  * It just pokes the data in.
  */
-
 void 
 pgendStoreOne`'func_name($@)`'Only (PGBackend *be,
-                     xacc_type($@) *ptr,
-                     sqlBuild_QType update)
+                                    xacc_type($@) *ptr,
+                                    sqlBuild_QType update)')
+
+define(`store_one_only',
+`store_one_only_header($@)
 {
    const char *buf;
    ENTER ("be=%p, xacc_type($@)=%p", be, ptr);
@@ -250,7 +252,7 @@ pgendStoreOne`'func_name($@)`'Only (PGBackend *be,
 
 ')
 
-define(`compare_one_only', 
+define(`compare_one_only_header',
 `
 /* ------------------------------------------------------ */
 /* This routine returns a positive int if the indicated object
@@ -258,9 +260,11 @@ define(`compare_one_only',
  * number if theres an error.
  * It does not do any traversals, it does not lock.  
  */
-
 int
-pgendCompareOne`'func_name($@)`'Only (PGBackend *be, xacc_type($@) *ptr)
+pgendCompareOne`'func_name($@)`'Only (PGBackend *be, xacc_type($@) *ptr)')
+
+define(`compare_one_only', 
+`compare_one_only_header($@)
 {
    const char *buf;
    PGresult *result;
@@ -296,16 +300,18 @@ pgendCompareOne`'func_name($@)`'Only (PGBackend *be, xacc_type($@) *ptr)
 
 ')
 
-define(`put_one_only', 
+define(`put_one_only_header',
 `
 /* ------------------------------------------------------ */
 /* This routine inserts or updates, as appropriate
  * It does not do any traversals, it does not lock.  
  * It just updates.
  */
-
 void 
-pgendPutOne`'func_name($@)`'Only (PGBackend *be, xacc_type($@) *ptr)
+pgendPutOne`'func_name($@)`'Only (PGBackend *be, xacc_type($@) *ptr)')
+
+define(`put_one_only', 
+`put_one_only_header($@)
 {
    int ndiffs;
    ndiffs = pgendCompareOne`'func_name($@)`'Only (be, ptr);
@@ -326,7 +332,7 @@ pgendPutOne`'func_name($@)`'Only (PGBackend *be, xacc_type($@) *ptr)
 
 ')
 
-define(`compare_version', 
+define(`compare_version_header',
 `
 /* ------------------------------------------------------ */
 /* This routine compares the version number of the object in 
@@ -336,9 +342,11 @@ define(`compare_version',
  * if the sql version is newer.  It returns zero if the
  * two are equal.
  */
-
 int 
-pgend`'func_name($@)`'CompareVersion (PGBackend *be, xacc_type($@) *ptr)
+pgend`'func_name($@)`'CompareVersion (PGBackend *be, xacc_type($@) *ptr)')
+
+define(`compare_version', 
+`compare_version_header($@)
 {
    char *p;
    int sql_version = 0;
@@ -356,7 +364,7 @@ pgend`'func_name($@)`'CompareVersion (PGBackend *be, xacc_type($@) *ptr)
 
 ')
 
-define(`is_deleted',
+define(`is_deleted_header',
 `
 /* ------------------------------------------------------ */
 /* This routine looks at the audit trail to see if the
@@ -364,9 +372,11 @@ define(`is_deleted',
  * it returns the version number of the deleted object;
  * otherwise it returns -1.
  */ 
+int
+pgend`'func_name($@)`'GetDeletedVersion (PGBackend *be, xacc_type($@) *ptr)')
 
-int 
-pgend`'func_name($@)`'GetDeletedVersion (PGBackend *be, xacc_type($@) *ptr)
+define(`is_deleted',
+`is_deleted_header($@)
 {
    char *p;
    int sql_version = -1;
@@ -383,18 +393,20 @@ pgend`'func_name($@)`'GetDeletedVersion (PGBackend *be, xacc_type($@) *ptr)
 
 ')
 
-define(`store_audit', 
+define(`store_audit_header',
 `
 /* ------------------------------------------------------ */
 /* This routine stores one autdit record in the database.
  * It does not do any traversals, it does not lock.  
  * It just pokes the data in. 
  */
-
 void 
 pgendStoreAudit`'func_name($@)`' (PGBackend *be,
-                     xacc_type($@) *ptr,
-                     sqlBuild_QType update)
+                                  xacc_type($@) *ptr,
+                                  sqlBuild_QType update)')
+
+define(`store_audit', 
+`store_audit_header($@)
 {
    const char *buf;
    ENTER ("be=%p, xacc_type($@)=%p", be, ptr);
