@@ -1,3 +1,9 @@
+2001-12-09  Dave Peticolas  <dave@krondo.com>
+
+	* src/backend/postgres: add autogenerated headers
+
+	* configure.in: add new default warnings
+
 2001-12-08  Dave Peticolas  <dave@krondo.com>
 
 	* src/bin/overrides/gnucash-build-env.in: add report-gnome dir
